# XPlayer

./: .gitignore  CHANGELOG.md  XPlayer.cabal  package.yaml  stack.yaml
app/: Main.hs
deploy/MacOS/: Info.plist  bundleMacOSAPP.sh
qt5-ui/: CMakeLists.txt
qt5-ui/resources/: XPlayer.icns  resources.qrc
qt5-ui/src/: lib.cpp  lib.hpp
